--- a/style.css
+++ b/style.css
@@ -14,3 +14,30 @@ main {
   padding: 10px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
+
+h1 {
+  font-size: 2em;
+  color: black;
+}
+
+h2 {
+  font-size: 1.5em;
+  color: black;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+}
+
+a:hover{
+  text-decoration: undefined;
+  color: lightslategray;
+}
